- More obvious coloring of variable entry fields requiring user input in plugins
- Default size of the code display in plugin dialogs has been increased			TODO: bump config version enum
- Added support for RKWard plugins shipped inside R packages 
- Fixed: PDFs and many other types of documents linked from help pages would not be opened, correctly
- Added support R 2.14.x
- Removed option to set options("printcmd")
- New option to run arbitrary (setup) commands in each session
- Added new pseudo graphics device "rk.printer.device" to provide printing via the KDE printer dialog
- Fixed: Printing was broken when kprinter is not available
- Support the results list new help.search() in R 2.14.x, which includes vignettes and demos		# TODO: actually test this with R 2.14!
- rk.edit.files() and rk.show.files() gain parameter "prompt", which can be used to suppress user prompt
- Added function rk.demo(), which is similar to demo(), but opens the example script in a script editor window
- Fixed: Some plugin dialogs would not become visible, or be shown in very small size, with some window managers
- Fixed: Potential crash when using context menus with "focus follows mouse" window activation policy
- Added shortcut Ctrl+Enter to insert a line break and submit from a script editor
- Reduce CPU usage while idle
- Bar plot, dot chart, pie chart, and Pareto plot plugins gain more tabulation options
- rk.results() now prints rownames, where appropriate
- "frame" elements in plugins can now be made checkable
- Disabling or hiding a plugin component makes it non-required, implicitly
- Box plot gains option to dogde grouped boxes
- Simplify internal handling of system() and system2() output					TODO: test on Windows!
- Simplify code produced by several plugins
- Fixed: Occasional duplication of first letter of keyword, when using "Copy lines to output" from the console window

--- Version 0.5.6 - May-30-2011