@@ -197,4 +197,16 @@ namespace RKCommonFunctions {
 
 		return out;
 	}
+
+	void setTips (const QString tip, QWidget *first, QWidget *second, QWidget *third) {
+		for (int i=0; i < 3; ++i) {
+			QWidget *w = first;
+			if (i == 1) w = second;
+			if (i == 2) w = third;
+			if (!w) return;
+
+			w->setToolTip (tip);
+			w->setWhatsThis (tip);
+		}
+	}
 }	// namespace
