@@ -1,3 +1,4 @@
+- The file filter for R script files is now configurable, and includes *.Rhistory, by default
 - More obvious coloring of variable entry fields requiring user input in plugins
 - Default size of the code display in plugin dialogs has been increased			TODO: bump config version enum
 - Added support for RKWard plugins shipped inside R packages 
